# tibber

./: Cargo.toml  LICENSE  README.md
examples/: fetch.rs  histogram.rs  lowest.rs  max_usage.rs
src/: lib.rs
tibber/: consumption.graphql  home.graphql  price.graphql  price_today.graphql  price_tomorrow.graphql  production.graphql  subscription.graphql  tibber.json
