[package]
name = "tibber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.78", features = ["derive"] }
graphql_client = { version = "0.10.0" , features = ["reqwest-blocking"] }
reqwest = { version = "^0.11", features = ["json", "blocking"] }
