[package]
name = "tibber"
version = "0.6.0"
edition = "2021"
authors = ["Frank A. Stevenson <root@localhost>"]
description = "A minimal set of bindings to Tibber graphql API"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snakehand/tibber.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.78", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
graphql_client = { version = "0.14.0" }
chrono = "0.4.19"
ureq-crate = { package = "ureq", version = "2.10.1", features = ["json"], optional = true }

[features]
default = ["reqwest", "graphql_client/reqwest-blocking"]
#default = ["ureq"]
ureq = ["ureq-crate"]
